--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>CONSULT - Consultancy Website Template</title>
+    <title>WIDZEES Consulting Services Website Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -549,7 +549,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>99 XXXXX, Casablanca, Morocco/p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>17 Rue Ibn Khalikane, Palmier. Casablanca</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>contact@widzees.com</p>
                 <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+212 665 886655</p>
             </div>
