--- a/about.html
+++ b/about.html
@@ -108,8 +108,9 @@
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
                 <h2 class="display-6 mb-4">Welcome To <span class="text-primary">Widzees Consulting Services</span></h2>
-                <h4 class="text-primary mb-4">Diam dolor diam ipsum sit. Clita erat ipsum et lorem stet no lorem sit clita duo justo magna dolore</h4>
-                <p class="mb-4">Et stet ipsum nonumy rebum eos justo, accusam invidunt aliquyam stet magna at et sanctus, vero sea sit amet dolores, sit dolor duo invidunt dolor, kasd rebum consetetur diam invidunt erat stet. Accusam nonumy lorem kasd eirmod. Justo clita sadipscing ea invidunt rebum sadipscing consetetur. Amet diam amet amet sanctus sanctus invidunt erat ipsum eirmod.</p>
+                <h4 class="text-primary mb-4">Widzees Consulting Services has helped many organizations startup in or move to Office 365.</h4>
+                <p class="mb-4">CLOUD, ON-PREMISES AND HYBRID SOLUTIONS</p>
+                <p class="mb-4">Our Consulting Services are provided by experts at deploying Microsoft services in the cloud, on-premises and in hybrid configurations.</p>
                 <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
             </div>
             <div class="col-lg-6">
