--- a/about.html
+++ b/about.html
@@ -108,8 +108,8 @@
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
                 <h2 class="display-6 mb-4">Welcome To <span class="text-primary">Widzees Consulting Services</span></h2>
-                <h4 class="text-primary mb-4">Widzees Consulting Services has helped many organizations startup in or move to Office 365.</h4>
-                <p class="mb-4">CLOUD, ON-PREMISES AND HYBRID SOLUTIONS</p>
+                <h4 class="text-dark mb-4">Widzees Consulting Services has helped many organizations startup in or move to Office 365.</h4>
+                <p class="text-dark  mb-4">CLOUD, ON-PREMISES AND HYBRID SOLUTIONS</p>
                 <p class="mb-4">Our Consulting Services are provided by experts at deploying Microsoft services in the cloud, on-premises and in hybrid configurations.</p>
                 <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
             </div>
