--- a/about.html
+++ b/about.html
@@ -111,6 +111,9 @@
                 <h4 class="text-dark mb-4">Widzees Consulting Services has helped many organizations startup in or move to Office 365.</h4>
                 <p class="text-dark  mb-4">CLOUD, ON-PREMISES AND HYBRID SOLUTIONS</p>
                 <p class="mb-4">Our Consulting Services are provided by experts at deploying Microsoft services in the cloud, on-premises and in hybrid configurations.</p>
+                <p class="text-dark  mb-4"> </p>
+                <p class="text-dark  mb-4">WE'LL HELP YOU MANAGE AND TRANSFORM YOUR BUSINESS</p>
+                <p class="mb-4">Our solutions are designed to optimize investments, modernize your business, connect your workforce and help you scale effectively. Together, we'll advance today and define tomorrow — and turn ideas into value.</p>
                 <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
             </div>
             <div class="col-lg-6">
