--- a/about.html
+++ b/about.html
@@ -138,7 +138,7 @@
                     </div>
                     <div class="d-flex text-white">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                            <i class="fa fa-cloud-upload fs-4"></i>
+                            <i class="fa fa-cloud fs-4"></i>
                         </div>
                         <div class="ps-4">
                             <h3>Hybrid Solutions</h3>
