--- a/about.html
+++ b/about.html
@@ -123,8 +123,15 @@
                             <i class="fa fa-cloud fs-4"></i>
                         </div>
                         <div class="ps-4">
-                            <h3>Cloud Solutions</h3>
-                            <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem sit clita duo</p>
+                            <h3>Cloud Solutions : Microsoft 365</h3>
+                            <p class="mb-0">Exchange Online</p>
+                            <p class="mb-0">Teams</p>
+                            <p class="mb-0">Microsoft Endpoint Manager</p>
+                            <p class="mb-0">Microsoft Defender for Office 365</p>
+                            <p class="mb-0">Azure AD</p>
+                            <p class="mb-0">Windows 11 deployment and management</p>
+                            <p class="mb-0">Microsoft 365 Security Solutions </p>
+                            <p class="mb-0">Microsoft 365 Purview Solutions </p>
                         </div>
                     </div>
                     <div class="d-flex text-white mb-5">
@@ -133,7 +140,13 @@
                         </div>
                         <div class="ps-4">
                             <h3>ON-Premises Solutions</h3>
-                            <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem sit clita duo</p>
+                            <p class="mb-0">Exchange Server</p>
+                            <p class="mb-0">Skype for business Server</p>
+                            <p class="mb-0">Active Directory Domain Services</p>
+                            <p class="mb-0">Health checks and remediation</p>
+                            <p class="mb-0">Security</p>
+                            <p class="mb-0">Public Key Infrastructure (PKI)</p>
+                            <p class="mb-0">Microsoft Virtualization</p>
                         </div>
                     </div>
                     <div class="d-flex text-white">
@@ -142,7 +155,8 @@
                         </div>
                         <div class="ps-4">
                             <h3>Hybrid Solutions</h3>
-                            <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem sit clita duo</p>
+                            <p class="mb-0">Microsoft 365</p>
+                            <p class="mb-0">On-Premises Solutions</p>
                         </div>
                     </div>
                 </div>
