--- a/about.html
+++ b/about.html
@@ -119,10 +119,10 @@
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
                     <div class="d-flex text-white mb-5">
-                        <div class="d-flex flex-shrink-0  bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
                             <i class="fa fa-cloud fs-4"></i>
                         </div>
-                        <div class="ps-4">
+                        <div class="ps-0">
                             <h3>Cloud Solutions : Microsoft 365</h3>
                             <p class="mb-0">Exchange Online</p>
                             <p class="mb-0">Teams</p>
@@ -135,10 +135,10 @@
                         </div>
                     </div>
                     <div class="d-flex text-white mb-5">
-                        <div class="d-flex flex-shrink-0  bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
                             <i class="fa fa-building fs-4"></i>
                         </div>
-                        <div class="ps-4">
+                        <div class="ps-0">
                             <h3>ON-Premises Solutions</h3>
                             <p class="mb-0">Exchange Server</p>
                             <p class="mb-0">Skype for business Server</p>
@@ -150,10 +150,10 @@
                         </div>
                     </div>
                     <div class="d-flex text-white">
-                        <div class="d-flex flex-shrink-0 bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
                             <i class="fa fa-cloud fs-4"></i>
                         </div>
-                        <div class="ps-4">
+                        <div class="ps-0">
                             <h3>Hybrid Solutions</h3>
                             <p class="mb-0">Microsoft 365</p>
                             <p class="mb-0">On-Premises Solutions</p>
