--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
     <div class="container-fluid bg-secondary p-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h2 class="display-6 mb-4">Welcome To <span class="text-primary">Widzees Consulting Services</span></h2>
+                <h2 class="display-6 mb-4">Welcome to <span class="text-primary">Widzees Consulting Services</span></h2>
                 <h4 class="text-dark mb-4">Widzees Consulting Services has helped many organizations startup in or move to Office 365.</h4>
                 <p class="text-dark  mb-4">CLOUD, ON-PREMISES AND HYBRID SOLUTIONS</p>
                 <p class="mb-4">Our Consulting Services are provided by experts at deploying Microsoft services in the cloud, on-premises and in hybrid configurations.</p>
@@ -119,7 +119,7 @@
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
                     <div class="d-flex text-white mb-0">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-0" style="width: 60px; height: 60px;">
                             <i class="fa fa-cloud fs-4"></i>
                         </div>
                         <div class="ps-0">
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="d-flex text-white mb-0">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-0" style="width: 60px; height: 60px;">
                             <i class="fa fa-building fs-4"></i>
                         </div>
                         <div class="ps-0">
@@ -150,7 +150,7 @@
                         </div>
                     </div>
                     <div class="d-flex text-white">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-0" style="width: 60px; height: 60px;">
                             <i class="fa fa-cloud fs-4"></i>
                         </div>
                         <div class="ps-0">
