--- a/about.html
+++ b/about.html
@@ -119,8 +119,8 @@
             <div class="col-lg-6">
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
                     <div class="d-flex text-white mb-0">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                            <i class="fa fa-cloud fs-4"></i>
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mb-4" style="width: 60px; height: 60px;">
+                            <i class="fa fa-cloud "></i>
                         </div>
                         <div class="ps-0">
                             <h3>Cloud Solutions : Microsoft 365</h3>
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="d-flex text-white mb-0">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mb-4" style="width: 60px; height: 60px;">
                             <i class="fa fa-building fs-4"></i>
                         </div>
                         <div class="ps-0">
@@ -150,7 +150,7 @@
                         </div>
                     </div>
                     <div class="d-flex text-white">
-                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                        <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle  mb-4" style="width: 60px; height: 60px;">
                             <i class="fa fa-cloud fs-4"></i>
                         </div>
                         <div class="ps-0">
