--- a/about.html
+++ b/about.html
@@ -109,10 +109,10 @@
             <div class="col-lg-6 py-6 px-5">
                 <h2 class="display-6 mb-4">Welcome to <span class="text-primary">Widzees Consulting Services</span></h2>
                 <h4 class="text-dark mb-4">Widzees Consulting Services has helped many organizations startup in or move to Office 365.</h4>
-                <h3 class="text-dark  mb-4">CLOUD, ON-PREMISES AND HYBRID SOLUTIONS</h3>
+                <h3 class="text-dark  mb-4">* CLOUD, ON-PREMISES AND HYBRID SOLUTIONS</h3>
                 <p class="mb-6">Our Consulting Services are provided by experts at deploying Microsoft services in the cloud, on-premises and in hybrid configurations.</p>
                 <p class="text-dark  mb-4"> </p>
-                <h3 class="text-dark  mb-4">WE'LL HELP YOU MANAGE AND TRANSFORM YOUR BUSINESS</h3>
+                <h3 class="text-dark  mb-4">* WE'LL HELP YOU MANAGE AND TRANSFORM YOUR BUSINESS</h3>
                 <p class="mb-6">Our solutions are designed to optimize investments, modernize your business, connect your workforce and help you scale effectively. Together, we'll advance today and define tomorrow — and turn ideas into value.</p>
                 <a href="" class="btn btn-primary py-md-3 px-md-5 rounded-pill">Get A Quote</a>
             </div>
