--- a/service.html
+++ b/service.html
@@ -116,7 +116,7 @@
                         <i class="fa fa-user-tie fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Cloud Solutions : Microsoft 365</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0"></p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -125,7 +125,7 @@
                         <i class="fa fa-chart-pie fa-2x"></i>
                     </div>
                     <h3 class="mb-3">ON-Premise Solutions</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0"></p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6">
@@ -134,7 +134,7 @@
                         <i class="fa fa-chart-line fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Hybrid Solutions</h3>
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor ipsum amet eos erat ipsum lorem et sit sed stet lorem</p>
+                    <p class="mb-0"></p>
                 </div>
             </div>
         </div>
@@ -147,7 +147,7 @@
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
                 <h1 class="display-5 mb-4">Request A Free Quote</h1>
-                <p class="mb-4">Kasd vero erat ea amet justo no stet, et elitr no dolore no elitr sea kasd et dolor diam tempor. Nonumy sed dolore no eirmod sit nonumy vero lorem amet stet diam at. Ea at lorem sed et, lorem et rebum ut eirmod gubergren, dolor ea duo diam justo dolor diam ipsum dolore stet stet elitr ut. Ipsum amet labore lorem lorem diam magna sea, eos sed dolore elitr.</p>
+                <p class="mb-4"></p>
                 <form>
                     <div class="row gx-3">
                         <div class="col-6">
@@ -165,9 +165,9 @@
                         <div class="col-6">
                             <div class="form-floating">
                                 <select class="form-select" id="floatingSelect" aria-label="Financial Consultancy">
-                                    <option selected>Financial Consultancy</option>
-                                    <option value="1">Strategy Consultancy</option>
-                                    <option value="2">Tax Consultancy</option>
+                                    <option selected>M365 Solutions Consultancy</option>
+                                    <option value="1">ON-Premises Solutions Consultancy</option>
+                                    <option value="2">Training Consultancy</option>
                                 </select>
                                 <label for="floatingSelect">Select A Service</label>
                             </div>
