--- a/about.html
+++ b/about.html
@@ -173,33 +173,17 @@
             <hr class="w-25 mx-auto bg-primary">
         </div>
         <div class="row g-5">
-            <div class="col-lg-4">
-                <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
-                    <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
-                        <p class="text-white text-uppercase mb-0">Designation</p>
-                    </div>
-                </div>
-            </div>
+            
             <div class="col-lg-4">
                 <div class="team-item position-relative overflow-hidden">
                     <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
                     <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
+                        <h3 class="text-white">Yassir ZOHEIRI</h3>
                         <p class="text-white text-uppercase mb-0">Designation</p>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
-                <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
-                    <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
-                        <p class="text-white text-uppercase mb-0">Designation</p>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
     <!-- Team End -->
