--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <h3 class="text-white mb-4">Follow Us</h3>
                 <div class="d-flex">
                     
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.linkedin.com/in/yassir-zoheiri-7280a013/"><i class="fab fa-linkedin-in fw-normal"></i></a>
                     
                 </div>
             </div>
