--- a/about.html
+++ b/about.html
@@ -183,6 +183,22 @@
                     </div>
                 </div>
             </div>
+
+            <div class="d-flex text-white mb-0">
+                <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mb-4" style="width: 60px; height: 60px;">
+                    <i class="fa fa-building fs-4"></i>
+                </div>
+                <div class="ps-0">
+                    <h3> About Yassir ZOHEIRI</h3>
+                    <p class="mb-1">Exchange Server</p>
+                    <p class="mb-1">Skype for business Server</p>
+                    <p class="mb-1">Active Directory Domain Services</p>
+                    <p class="mb-1">Health checks and remediation</p>
+                    <p class="mb-1">Security</p>
+                    <p class="mb-1">Public Key Infrastructure (PKI)</p>
+                    <p class="mb-1">Microsoft Virtualization</p>
+                </div>
+            </div>
             
         </div>
     </div>
