--- a/about.html
+++ b/about.html
@@ -186,7 +186,7 @@
 
             <div class="d-flex text-white mb-0">
                 <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mb-4" style="width: 60px; height: 60px;">
-                    <i class="fa fa-building fs-4"></i>
+                    <i class="fa fa-users fs-4"></i>
                 </div>
                 <div class="ps-0">
                     <h3> About Yassir ZOHEIRI</h3>
