--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mb-4" style="width: 60px; height: 60px;">
                             <i class="fa fa-cloud "></i>
                         </div>
-                        <div class="ps-0">
+                        <div class="ps-2">
                             <h3> Cloud Solutions : Microsoft 365</h3>
                             <p class="mb-1">Exchange Online</p>
                             <p class="mb-1">Teams</p>
@@ -138,7 +138,7 @@
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mb-4" style="width: 60px; height: 60px;">
                             <i class="fa fa-building fs-4"></i>
                         </div>
-                        <div class="ps-0">
+                        <div class="ps-2">
                             <h3> ON-Premises Solutions</h3>
                             <p class="mb-1">Exchange Server</p>
                             <p class="mb-1">Skype for business Server</p>
@@ -153,7 +153,7 @@
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mb-4" style="width: 60px; height: 60px;">
                             <i class="fa fa-cloud fs-4"></i>
                         </div>
-                        <div class="ps-0">
+                        <div class="ps-2">
                             <h3> Hybrid Solutions</h3>
                             <p class="mb-1">Microsoft 365</p>
                             <p class="mb-1">On-Premises Solutions</p>
@@ -189,14 +189,33 @@
                         <i class="fa fa-users fs-4"></i>
                     </div>
                         <div class="ps-0">
-                            <h3> About Yassir ZOHEIRI</h3>
-                            <p class="mb-1">Exchange Server</p>
-                            <p class="mb-1">Skype for business Server</p>
-                            <p class="mb-1">Active Directory Domain Services</p>
-                            <p class="mb-1">Health checks and remediation</p>
-                            <p class="mb-1">Security</p>
-                            <p class="mb-1">Public Key Infrastructure (PKI)</p>
-                            <p class="mb-1">Microsoft Virtualization</p>
+                            <h3> Yassir ZOHEIRI</h3>
+                            <p class="mb-1">I am experienced consultant focused on partnering with sales and customers to design and implement innovative technical solutions. </p>
+                            <p class="mb-1">For the past 32 years I have worked with enterprise customers in both a design and delivery capacity for Microsoft Exchange, Active Directory, Skype, Virtualization, Azure Solutions and Office 365. </p>
+                            <p class="mb-1">I thrive on the challenge of solving complex issues and enjoy networking with peers and colleagues to continuously develop my knowledge and skills.</p>
+                            <p class="mb-1"></p>
+                            <h3 class="mb-1">EXPERIENCE :</h3>
+                            <p class="mb-1">During the last 18 years I worked as Principal Consultant for Microsoft Services with customers in the MEA region</p>
+                            <p class="mb-1">I have an extensive experience in managing onshore and offshore migration and transformation projects for clients in the professional services industry, including the implementation of Office 365/M365 solutions across multiple streams.</p>
+                            <p class="mb-1">As a lead architect, I have successfully led over 100 projects focused on migrating collaboration-based technologies to Exchange 2019 and Exchange Online.</p>
+                            <p class="mb-1">As a lead architect, I collaborate with enterprise clients in both the design and delivery aspects of Microsoft technologies, such as Exchange, Active Directory, Skype, Virtualization, Azure Solutions, and Office 365.</p>
+                            <p class="mb-1"></p>
+                            <h3 class="mb-1">CERTIFICATIONS :</h3>
+                            <p class="mb-1"> * Microsoft Certified - CyberSecurity Architect Expert</p>
+                            <p class="mb-1"> * Microsoft 365 Certified: Enterprise Administrator Expert</p>
+                            <p class="mb-1"> * Microsoft Certified: Messaging & Teams Administrator</p>
+                            <p class="mb-1"> * Microsoft Certified: Identity and Access Administrator Associate</p>
+                            <p class="mb-1"> * Microsoft Certified: Azure AI Engineer</p>
+                            <p class="mb-1"> * Microsoft Certified Trainer</p>
+                            <p class="mb-1"></p>
+                            <h3 class="mb-1">LANGUAGES:</h3>
+                            <p class="mb-1"> * Arabic : Native </p>
+                            <p class="mb-1"> * Frencht : Native</p>
+                            <p class="mb-1"> * English : Proficient </p>
+                            <div class="d-flex">
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.linkedin.com/in/yassir-zoheiri-7280a013/"><i class="fab fa-linkedin-in fw-normal"></i></a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
