--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
                 </div>
             </div>
             <div class="col-lg-6">
-                <div class="d-flex text-white mb-0">
+                <div class="d-flex text-Black mb-0">
                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mb-4" style="width: 60px; height: 60px;">
                         <i class="fa fa-users fs-4"></i>
                     </div>
