--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
                         <i class="fa fa-users fs-4"></i>
                     </div>
                         <div class="ps-0">
-                            <h3> Yassir ZOHEIRI</h3>
+                            <h2 class="text-center text-Black mb-0"> Yassir ZOHEIRI</h2>
                             <p class="mb-1">I am experienced consultant focused on partnering with sales and customers to design and implement innovative technical solutions. </p>
                             <p class="mb-1">For the past 32 years I have worked with enterprise customers in both a design and delivery capacity for Microsoft Exchange, Active Directory, Skype, Virtualization, Azure Solutions and Office 365. </p>
                             <p class="mb-1">I thrive on the challenge of solving complex issues and enjoy networking with peers and colleagues to continuously develop my knowledge and skills.</p>
