--- a/about.html
+++ b/about.html
@@ -212,6 +212,8 @@
                             <p class="mb-1"> * Arabic : Native </p>
                             <p class="mb-1"> * Frencht : Native</p>
                             <p class="mb-1"> * English : Proficient </p>
+                            <p class="mb-1"></p>
+                            <p class="mb-1"></p>
                             <div class="d-flex">
                                 <a class="btn btn-lg btn-primary btn-lg-square rounded-circle me-2" href="https://www.linkedin.com/in/yassir-zoheiri-7280a013/"><i class="fab fa-linkedin-in fw-normal"></i></a>
                             </div>
