--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
         <div class="row g-5">
             
             <div class="col-lg-4">
-                <div class="team-item position-relative overflow-hidden">
+                <div class="team-item position-relative ">
                     <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
                     <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
                         <h3 class="text-white">Yassir ZOHEIRI</h3>
