--- a/contact.html
+++ b/contact.html
@@ -94,9 +94,12 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Contact Us</h1>
-                <a href="">Home</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="">Contact</a>
+                <div class="col-lg-3 col-md-6">
+                    <h3 class="text-white mb-4">Get In Touch</h3>
+                    <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>17 Rue Ibn Khalikane Palmier, Casablanca, Morocco</p>
+                    <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>contact@widzees.com</p>
+                    <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+212 665 8866550</p>
+                </div>
             </div>
         </div>
     </div>
