--- a/contact.html
+++ b/contact.html
@@ -95,9 +95,9 @@
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Contact Us</h1>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>17 Rue Ibn Khalikane Palmier, Casablanca, Morocco</p>
-                    <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>contact@widzees.com</p>
-                    <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+212 665 8866550</p>
+                    <p class="mb-2"><i class="bi bi-geo-alt text-White text-center me-2"></i>17 Rue Ibn Khalikane Palmier, Casablanca, Morocco</p>
+                    <p class="mb-2"><i class="bi bi-envelope-open text-white text-center me-2"></i>contact@widzees.com</p>
+                    <p class="mb-0"><i class="bi bi-telephone text-white text text-center me-2"></i>+212 665 8866550</p>
                 </div>
             </div>
         </div>
