--- a/contact.html
+++ b/contact.html
@@ -95,9 +95,9 @@
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Contact Us</h1>
                 <div class="col-lg-auto col-md-6 text-center">
-                    <h4 class="mb-0 text-White"><i class="bi bi-geo-alt text-primary text-center me-2"></i>17 Rue Ibn Khalikane Palmier, Casablanca, Morocco</h4>
-                    <h4 class="mb-0 text-White"><i class="bi bi-envelope-open text-primary text-center me-2"></i>contact@widzees.com</h4>
-                    <h4 class="mb-0 text-white"><i class="bi bi-telephone text-primary text-center me-2"></i>+212 665 8866550</h4>
+                    <p class="mb-0 text-White"><i class="bi bi-geo-alt text-primary text-center me-2"></i>17 Rue Ibn Khalikane Palmier, Casablanca, Morocco</p>
+                    <p class="mb-0 text-White"><i class="bi bi-envelope-open text-primary text-center me-2"></i>contact@widzees.com</p>
+                    <p class="mb-0 text-white"><i class="bi bi-telephone text-primary text-center me-2"></i>+212 665 8866550</p>
                 </div>
             </div>
         </div>
