--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,7 @@
                 <h1 class="display-4 text-white">Contact Us</h1>
                 <div class="col-lg-auto col-md-6 text-center">
                     <p class="mb-0 text-White"><i class="bi bi-geo-alt text-primary text-center me-2"></i>17 Rue Ibn Khalikane Palmier, Casablanca, Morocco</p>
+                    <p class="mb-0 text-White"></p>
                     <p class="mb-0 text-White"><i class="bi bi-envelope-open text-primary text-center me-2"></i>contact@widzees.com</p>
                     <p class="mb-0 text-white"><i class="bi bi-telephone text-primary text-center me-2"></i>+212 665 8866550</p>
                 </div>
