--- a/service.html
+++ b/service.html
@@ -146,7 +146,7 @@
     <div class="container-fluid bg-secondary px-0">
         <div class="row g-0">
             
-            <div class="col-lg-6" style="min-height: 400px;">
+            <div class="col-lg-auto" style="min-height: 400px;">
                 <div class="position-relative h-100">
                     <img class="position-absolute w-100 h-100" src="img/quote.jpg" style="object-fit: cover;">
                 </div>
