--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <a href="index.html" class="navbar-brand p-0">
-            <h1 class="m-0 text-uppercase text-primary"></i>Widzees Consulting Services</h1>
+            <h1 class="m-0 text-primary"></i>Widzees Consulting Services</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -108,8 +108,7 @@
     <!-- Contact Start -->
     <div class="container-fluid bg-secondary px-0">
         <div class="row g-0">
-            
-            <div class="col-lg-12 style="min-height: 400px;">
+            <div class="col-lg-12 style="min-height: 800px;">
                 <div class="position-relative h-100">
                     <iframe class="position-relative w-100 h-100"
                         src="https://www.city-info.ma/casablanca/fr/build/3660059825/344/"
