--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
     <!-- Contact Start -->
     <div class="container-fluid bg-secondary px-0">
         <div class="row g-0">
-            <div class="col-lg-12 style="min-height: 800px;">
+            <div class="col-lg-12" style="min-height: 800px;">
                 <div class="position-relative h-100">
                     <iframe class="position-relative w-100 h-100"
                         src="https://www.city-info.ma/casablanca/fr/build/3660059825/344/"
