--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
     <div class="container-fluid bg-secondary p-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
-                <h4 class="display-6 mb-4">Welcome to <span class="text-primary">Widzees Consulting Services</span></h4>
+                <h4 class="display-6 mb-4">Welcome to <span> <img src="img/Logo_widzees.jpg" alt="Widzees Consulting Services" width="400" height="100"> </span></h4>
                 <h4 class="text-dark mb-4">Widzees Consulting Services has helped many organizations startup in or move to Office 365.</h4>
                 <h3 class="text-dark  mb-4">* CLOUD, ON-PREMISES AND HYBRID SOLUTIONS</h3>
                 <p class="mb-6">Our Consulting Services are provided by experts at deploying Microsoft services in the cloud, on-premises and in hybrid configurations.</p>
