--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
 
 
     <!-- About Start -->
-    <div class="container-fluid bg-secondary p-0">
+    <div class="container-fluid bg-white p-0">
         <div class="row g-0">
             <div class="col-lg-6 py-6 px-5">
                 <h4 class="display-6 mb-4">Welcome to <span> <img src="img/Logo_widzees.jpg" alt="Widzees Consulting Services" width="400" height="100"> </span></h4>
