--- a/about.html
+++ b/about.html
@@ -212,7 +212,7 @@
                             <p class="mb-4"></p>
                             <h3 class="mb-1">LANGUAGES:</h3>
                             <p class="mb-1"> * Arabic : Native </p>
-                            <p class="mb-1"> * Frencht : Native</p>
+                            <p class="mb-1"> * French : Native</p>
                             <p class="mb-1"> * English : Proficient </p>
                             <p class="mb-4"></p>
                             <div class="d-flex">
