--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
             <div class="col-lg-12" style="min-height: 800px;">
                 <div class="position-relative h-100">
                     <iframe class="position-relative w-100 h-100"
-                        src="https://www.waze.com/fr/live-map/directions/ma/casablanca-settat/casablanca/11-av.-2-mars?to=place.ChIJ85R0pqHSpw0R7oWB0YmAN2s"
+                        src="https://www.google.com/maps/place/11+Av.+2+Mars,+Casablanca+20500/@33.5820647,-7.6194902,17z/data=!3m1!4b1!4m10!1m2!2m1!1s11+Avenue+2+Mars,++3%C3%A8me+%C3%A9tage+-+N%C2%B0+9,+Casablanca+20490,+Morocco!3m6!1s0xda7d2a1a67494f3:0x6b378089d18185ee!8m2!3d33.5820648!4d-7.6148821!15sCkIxMSBBdmVudWUgMiBNYXJzLCAgM8OobWUgw6l0YWdlIC0gTsKwIDksIENhc2FibGFuY2EgMjA0OTAsIE1vcm9jY2-SARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11p0_g567r?entry=ttu"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
