--- a/quote.html
+++ b/quote.html
@@ -49,7 +49,7 @@
                         <p class="m-0"><i class="fa fa-envelope-open me-2"></i>contact@widzees.com</p>
                     </div>
                     <div class="py-2">
-                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+212 665 88.66.55</p>
+                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+212 665 88.66.55 - +212 522 22.21.80</p>
                     </div>
                 </div>
             </div>
@@ -189,7 +189,7 @@
                 <h3 class="text-white mb-4">Get In Touch</h3>
                 <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>11 Avenue 2 Mars, Immeuble Best Center, 3ème étage - N° 9, Casablanca 20490, Morocco</p>
                 <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>contact@widzees.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+212 665 88.66.55</p>
+                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+212 665 88.66.55 - +212 522 22.21.80</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
