--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                         <p class="m-0"><i class="fa fa-envelope-open me-2"></i>contact@widzees.com</p>
                     </div>
                     <div class="py-2">
-                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+212 665 88.66.55 - +212 522 22.21.80 - +212 522 22.21.80</p>
+                        <p class="m-0"><i class="fa fa-phone-alt me-2"></i>+212 665 88.66.55 - +212 522 22.21.80</p>
                     </div>
                 </div>
             </div>
