--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,10 @@
             <!--  <h1 class="m-0  text-primary"></i>WIDZEES Consulting Services</h1> -->
               <img src="img/Logo_widzees.jpg" alt="Widzees Consulting Services" width="400" height="100">
           </a>
+          <a href="index.html" class="navbar-brand p-0">
+            <!--  <h1 class="m-0  text-primary"></i>WIDZEES Consulting Services</h1> -->
+              <img src="img/MicrosoftPartner_Medium.jpg" alt="Logo Partner" width="300" height="75">
+          </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
