--- a/service.html
+++ b/service.html
@@ -121,8 +121,7 @@
                         <i class="fa fa-cloud fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Cloud Solutions: </h3>
-                    <h3 class="mb-3">Microsoft 365 & Copilot,</h3>
-                    <h3 class="mb-3">Microsoft Azure</h3>
+                    <h3 class="mb-3">Office 365 Copilot, Azure</h3>
                     <h3 class="mb-3">M365 and Azure Subscriptions</h3>
                     <h3 class="mb-3">Souscriptions M365 & Azure</h3>
                     <p class="mb-0"></p>
