--- a/service.html
+++ b/service.html
@@ -132,7 +132,7 @@
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
                         <i class="fa fa-building fa-2x"></i>
                     </div>
-                    <h3 class="mb-3">ON-Premise Solutions:</h3>
+                    <h3 class="mb-3">ON-Premises Solutions:</h3>
                     <h3 class="mb-3">Microsoft Solutions ,</h3>
                     <h3 class="mb-3">Microsoft Licenses ,</h3>
                     <h3 class="mb-3">Licenses Microsoft</h3>
