--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0 me-n3">
                 <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="Widzees.html" class="nav-item nav-link">About</a>
+                <a href="widzees.html" class="nav-item nav-link">About</a>
                 <a href="Cloud-Microsoft-Maroc-Office-365-Azure-licenses-consulting-Partenaire.html" class="nav-item nav-link">Service</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -104,7 +104,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">IT Technology Consultancy</h5>
                             <h1 class="display-1 text-white mb-md-4">We Provide Solution On Your Business</h1>
-                            <a href="Widzees.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">About Us</a>
+                            <a href="widzees.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">About Us</a>
                             <a href="contact.html" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase">IT/Technology  Consultancy</h5>
                             <h1 class="display-1 text-white mb-md-4">Take Our Help To Reach The Top Level</h1>
-                            <a href="Widzees.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">About Us</a>
+                            <a href="widzees.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">About Us</a>
                             <a href="contact.html" class="btn btn-secondary py-md-3 px-md-5 rounded-pill">Contact Us</a>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                 <h3 class="text-white mb-4">Quick Links</h3>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="Widzees.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="widzees.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
                     <a class="text-secondary mb-2" href="Cloud-Microsoft-Maroc-Office-365-Azure-licenses-consulting-Partenaire.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
                     <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog Post</a>
                     <a class="text-secondary" href="contact"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
@@ -167,7 +167,7 @@
                 <h3 class="text-white mb-4">Popular Links</h3>
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-secondary mb-2" href="index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                    <a class="text-secondary mb-2" href="Widzees.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                    <a class="text-secondary mb-2" href="widzees.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
                     <a class="text-secondary mb-2" href="Cloud-Microsoft-Maroc-Office-365-Azure-licenses-consulting-Partenaire.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
                     <a class="text-secondary mb-2" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Latest Blog Post</a>
                     <a class="text-secondary" href="contact"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
