--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
                             <i class="fa fa-cloud "></i>
                         </div>
                         <div class="ps-2">
-                            <h3> Cloud Solutions : Microsoft 365</h3>
+                            <h3><U>Cloud Solutions : Microsoft 365</U></h3>
                             <p class="mb-1">Exchange Online</p>
                             <p class="mb-1">Teams</p>
                             <p class="mb-1">Microsoft Endpoint Manager</p>
